syntax = "proto3";
package types;

// GameData 游戏数据
message GameData {
    // animals 动物卡牌
    repeated Card animals = 1;
}

// Card 卡牌描述
message Card {
    // name 名称
    string name = 1;

    // kind 卡牌分类
    POI kind = 2;

    // scores 得分
    repeated int32 scores = 3;

    // pattern 需要条件
    repeated Token pattern = 4;
}

// Color 颜色
enum Color {
    // 未设置
    ColorUnset = 0;

    // blue 23
    ColorBlue = 1;

    // gray 23
    ColorGray = 2;

    // brown 21
    ColorBrown = 3;

    // green 19
    ColorGreen = 4;

    // yellow 19
    ColorYellow = 5;

    // red 15
    ColorRed = 6;
}

// POI 兴趣点
enum POI {
    POIUnset = 0;

    POIMountain = 1;

    POIBuilding = 2;

    POITree = 3;

    POIWater = 4;

    POIField = 5;
}

// Token 条件描述
message Token {
    // poi 兴趣点
    POI poi = 1;

    // animal 放置动物，标记 (0, 0)
    bool animal = 2;

    // delta_q 相对于动物格偏移 q
    int32 delta_q = 3;

    // delta_r 相对于动物格偏移 r
    int32 delta_r = 4;

    // height 需要高度
    int32 height = 5;
}
